--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
   "devDependencies": {
     "nodemon": "^1.17.4",
     "ts-node": "^6.0.3",
+    "tslint": "^5.10.0",
     "typescript": "^2.8.3"
+  },
+  "dependencies": {
+    "express": "^4.16.3"
   }
 }
