--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/mock-bird/mocker#readme",
   "devDependencies": {
+    "@types/express": "^4.11.1",
+    "@types/node": "^10.1.2",
     "nodemon": "^1.17.4",
     "ts-node": "^6.0.3",
     "tslint": "^5.10.0",
