--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
   "devDependencies": {
     "@types/express": "^4.11.1",
     "@types/node": "^10.1.2",
+    "@types/yamljs": "^0.2.30",
     "nodemon": "^1.17.4",
     "ts-node": "^6.0.3",
     "tslint": "^5.10.0",
     "typescript": "^2.8.3"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "rxjs": "^6.2.0",
+    "yamljs": "^0.3.0"
   }
 }
