--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Mock server",
   "main": "index.js",
   "scripts": {
-    "watch": "nodemon --exec ./node_modules/.bin/ts-node -- ./src/index.ts"
+    "watch": "nodemon --exec ./node_modules/.bin/ts-node -- ./src/app/index.ts",
+    "test": "mocha -r ts-node/register src/spec/**/*.spec.ts",
+    "test:watch": "mocha --watch -r ts-node/register src/spec/**/*.spec.ts --watch-extensions ts"
   },
   "repository": {
     "type": "git",
@@ -22,9 +24,13 @@
   },
   "homepage": "https://github.com/mock-bird/mocker#readme",
   "devDependencies": {
+    "@types/chai": "^4.1.3",
     "@types/express": "^4.11.1",
+    "@types/mocha": "^5.2.0",
     "@types/node": "^10.1.2",
     "@types/yamljs": "^0.2.30",
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
     "nodemon": "^1.17.4",
     "ts-node": "^6.0.3",
     "tslint": "^5.10.0",
