--- a/example.yml
+++ b/example.yml
@@ -95,12 +95,15 @@ components:
       required:
         - id
         - name
+        - age
       properties:
         id:
           type: integer
           format: int64
         name:
           type: string
+        age:
+          type: integer
         tag:
           type: string
     Pets:
